disk based implementation v1